apps/capra/n8n/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: n8n
spec:
  podSelector:
    matchLabels:
      service: n8n
  policyTypes:
    - Ingress
  ingress:
    - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres
spec:
  podSelector:
    matchLabels:
      service: postgres-n8n
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              service: n8n
      ports:
        - protocol: TCP
          port: 5432
